progs/tests/func/wrong_ret.sy
start :: fn {

    f : fn -> int = fn {}
    f
}

// error: #TypeMismatch(_, _)
